# RealEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
src/Core/: CMakeLists.txt
src/Core/include/Core/: Assert.hpp  Config.hpp  Export.hpp  FileSystem.hpp  FileSystem.inl  FlatMap.hpp  Hash.hpp  HashedString.hpp  LibraryLoader.hpp  LibraryLoader.inl  Logger.hpp  Logger.inl  Revertible.hpp  String.hpp  Timer.hpp  Types.hpp  Utils.hpp
src/Core/include/Core/Assets/: IAsset.hpp
src/Core/include/Core/Math/: Color.hpp  Color.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl
src/Core/include/Core/Meta/: TypeInfo.hpp  TypeInfo.inl
src/Core/src/: Color.cpp  LibraryLoader.cpp  Logger.cpp  String.cpp  TypeInfo.cpp
src/IgniCLI/: CMakeLists.txt
src/IgniCLI/assets/: igni_grammar.txt  lang_grammar.txt
src/IgniCLI/assets/source/: benchmark.igni  bubble_sort.igni  generate_primes.igni  main.igni  math.igni  stdlib.igni  stdlib_dotnet.igni  stdlib_rvm.igni  unity_test.igni
src/IgniCLI/include/IgniCLI/: BuildType.hpp  CLArguments.hpp  Compiler.hpp  Export.hpp
src/IgniCLI/include/IgniCLI/Runners/: DotNetRunner.hpp  IRunner.hpp  RvmRunner.hpp
src/IgniCLI/src/: igni-cli.cpp
src/IgniLang/: CMakeLists.txt  binary_rules.json  collect_code.bat  semantics.json  targets.json
src/IgniLang/include/IgniLang/: AstConverter.hpp  AstNodes.hpp  BindingContext.hpp  BuildCst.hpp  BuildTarget.hpp  CstBuilder.hpp  Dummy.hpp  Export.hpp  LexerFactory.hpp  TextCompiler.hpp  TokenType.hpp
src/IgniLang/include/IgniLang/AST/: AstConverter.hpp  AstNodes.hpp
src/IgniLang/include/IgniLang/CST/: CstBuilder.hpp  CstNode.hpp
src/IgniLang/include/IgniLang/Compiler/: AsmCodeGenerator.hpp  CodeGenerator.hpp  DotNetBackend.hpp  DotNetCodeGenerator.hpp  IBackend.hpp  Pipeline.hpp  RvmBackend.hpp  ScopeAnalyzer.hpp  TextCompiler.hpp
src/IgniLang/include/IgniLang/Diagnostic/: Diagnostic.hpp
src/IgniLang/include/IgniLang/Optimization/: DeadCodeEliminator.hpp
src/IgniLang/src/: Dummy.cpp  Function.cpp  Variable.cpp
src/IgniLang/tests/: E2ETests.cpp  FrontendTests.cpp  IgniLangTests.cpp  TestUtils.hpp
src/IgniLang/tests/scripts/: 01_primitives_math.igni  02_control_flow.igni  03_functions.igni  04_classes_oop.igni  05_generics.igni  06_deep_closures.igni  07_complex_generics.igni  08_virtual_dispatch.igni  09_varargs_packing.igni  10_coroutines.igni  11_stdlib_globals.igni  12_stdlib_array.igni  13_stdlib_mutable_array.igni  14_stdlib_string.igni  15_type_casting.igni  bubble_sort.igni  math.igni
src/IgniLang/tools/CodeGen/: Builder.hpp  GeneratorEngine.hpp  main.cpp
src/IgniStdLib/: CMakeLists.txt
src/IgniStdLib/include/IgniStdLib/: Export.hpp
src/IgniStdLib/src/: IgniStdLib.cpp
src/Launcher/: CMakeLists.txt  CameraControlSystem.hpp  Components.hpp  HierarchySystem.hpp  JumpPhysicsSystem.hpp  LauncherApplication.hpp  Letters.hpp  ScriptCompiler.hpp  main.cpp
src/Launcher/Lab1/Circle/: CircleLayout.hpp
src/Launcher/Lab1/Hangman/: CollisionSystem.hpp  HangmanLayout.cpp  HangmanLayout.hpp
src/Launcher/Lab1/House/: HouseLayout.hpp
src/Launcher/Lab1/Letters/: JumpPhysicsSystem.hpp  LettersLayout.hpp
src/Launcher/Lab2/Alchemy/: AlchemyComponents.hpp  AlchemyGame.hpp  AlchemyLayout.hpp  IngredientStorage.hpp
src/Launcher/Lab3/Asteroids/: AsteroidCollisionSystem.hpp  AsteroidsComponents.hpp  AsteroidsConstants.hpp  AsteroidsLayout.cpp  AsteroidsLayout.hpp  LifetimeSystem.hpp  MovementSystem.hpp  ShipSystem.hpp
src/Launcher/Lab4/Arcanoid/: ArcanoidGameSystem.hpp  ArcanoidLayout.hpp  BonusFactory.hpp  Components.hpp  Constants.hpp
src/Launcher/Lab4/Maze/: MazeGame.hpp  MazeLayout.hpp
src/Launcher/Lab4/Piano/: PianoInitializer.hpp  PianoLayout.hpp
src/Launcher/Lab6/: BattleCityComponents.hpp  BattleCityLayout.hpp  BattleCitySystem.hpp  EntityFactory.hpp
src/Launcher/assets/: .gitignore
src/Launcher/assets/scripts/: array_tests.rbs  closure_tests.rbs  coroutine_async_tests.rbs  coroutine_generator_tests.rbs  coroutine_launch_tests.rbs  fibb_recursion_test.rbs  function_callback_test.rbs  function_test.rbs  native_read_test.rbs  test.rbs  user_types_test.rbs
src/Launcher/assets/source/: bubble_sort.igni
src/Render2D/: CMakeLists.txt
src/Render2D/include/Render2D/: Export.hpp  Renderer2D.hpp  SFMLRenderAPI.hpp
src/Render2D/src/: Renderer2D.cpp  SFMLRenderAPI.cpp
src/Render2D/src/OpenGL/: OpenGLRenderAPI.cpp
src/Render2D/src/SFML/: SFMLRenderAPI.cpp
src/RenderCore/: CMakeLists.txt
src/RenderCore/include/RenderCore/: AnimatedModel.hpp  Animator.hpp  Event.hpp  Event.inl  Export.hpp  Font.hpp  IRenderAPI.hpp  IWindow.hpp  Image.hpp  Keyboard.hpp  Light.hpp  LoadTexture.hpp  Material.hpp  Model.hpp  Mouse.hpp  PrimitiveType.hpp  StaticMesh.hpp  Texture.hpp  Vertex.hpp
src/RenderCore/shaders/: animation3d.vert.glsl  dynamic2d.frag.glsl  dynamic2d.vert.glsl  dynamic3d.vert.glsl  instantiated3d.vert.glsl  pbr.frag.glsl  phong.frag.glsl  skybox.frag.glsl  skybox.vert.glsl
src/RenderCore/shaders/compute/: culling3d.comp.glsl
src/RenderCore/src/: AnimatedModel.cpp  Animator.cpp  AssetManager.cpp  Font.cpp  Image.cpp  Input.cpp  Keyboard.cpp  Model.cpp  Mouse.cpp  SFMLWindow.cpp  Texture.cpp  TextureLoader.cpp
src/RenderCore/src/GLFW/: BufferLayout.cpp  Font.cpp  GLFWWindow.cpp  IndexBuffer.cpp  Input.cpp  OpenGLRenderAPI.cpp  Shader.cpp  StaticMesh.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
src/RenderCore/src/SFML/: Font.cpp  Input.cpp  SFMLRenderAPI.cpp  SFMLWindow.cpp  Texture.cpp
src/Runtime/: CMakeLists.txt
src/Runtime/include/Runtime/: Application.hpp  Application.inl  Components.hpp  Entity.hpp  Entity.inl  Export.hpp  Layout.hpp  LayoutTraits.hpp  Main.hpp  RenderSystem2D.hpp  Scene.hpp  Scene.inl  System.hpp
src/Runtime/src/: Application.cpp  AssetManager.cpp  Entity.cpp  Layout.cpp  PhysicsSystem.cpp  RenderSystem2D.cpp  RenderSystem3D.cpp  Scene.cpp
src/Scripting/: CMakeLists.txt
src/Scripting/include/Scripting/: Export.hpp  ScriptLoader.hpp  ScriptNode.hpp
src/Scripting/src/: ScriptLoader.cpp
(+141 files in other folders)
